// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Btn should match snapshot 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn snapshot svelte-1k85n1w"
    >
      <span
        class="_tadashi_svelte_btn_slot_workaround svelte-1k85n1w"
      />
       
       
      <svg
        class="_tadashi_svelte_btn__ripple svelte-1k85n1w"
        viewBox="0 0 600 600"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="svelte-1k85n1w"
          cx="300"
          cy="300"
          r="300"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`Btn should match snapshot with slot 1`] = `
<body>
  <div>
    <button
      class="_tadashi_svelte_btn svelte-1k85n1w"
    >
      <span
        class="_tadashi_svelte_btn_slot_workaround svelte-1k85n1w"
      />
       
      xxx
       
      <svg
        class="_tadashi_svelte_btn__ripple svelte-1k85n1w"
        viewBox="0 0 600 600"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="svelte-1k85n1w"
          cx="300"
          cy="300"
          r="300"
        />
      </svg>
    </button>
  </div>
</body>
`;
